--- a/index-css-grid.html
+++ b/index-css-grid.html
@@ -28,19 +28,41 @@
         </nav>
 
         <section id="banner">
-            Banner
+            
         </section>
         <section id="descripcion">
-
+                <p>Estamos ubicados en el barrio La Cabrera al norte de Bogotá, en un contexto de lujo donde interactúan los negocios, 
+                el ocio y el descanso, gracias a su estratégica ubicación rodeada de bancos, restaurantes de alta cocina, centros comerciales,
+                almacenes de lujo y emblemáticos parques para aprovechar la naturaleza entre la ciudad caminay y hacer un poco de deporte al aire 
+                libre están el parque del Virrey y El Parque de la 93. Además de nuestro exclusivo diseño, ponemos a tu disposición una oferta 
+                gastronómica tan sofisticada como saludable a base de productos locales, cargados de lo mejor de la tradición colombiana.</p>
         </section>
         <section id="feature">
-
+            <h2 class="feature-tittle">Razones por las que disfrutarás quedarte con nosotros</h2>
+            <div class="feature-description">
+                <div class="feature feature-blue">
+                    <i class="fa-solid fa-bell-concierge"></i>
+                    <p>Reserva</p>
+                </div>
+                <div class="feature feature-black">
+                    <i class="fa-solid fa-bed"></i>
+                    <p>Descanso</p>
+                </div>
+                <div class="feature feature-blue">
+                    <i class="fa-solid fa-wifi"></i>
+                    <p>Wifi</p>
+                </div>
+                <div  class="feature feature-black">
+                    <i class="fa-solid fa-dumbbell"></i>
+                    <p>Deporte</p>
+                </div>
+            </div>
         </section>
         <section id="ubicacion">
-
+            <h2>Ubícanos</h2>
         </section>
         <section id="opinion">
-        OP
+            <h2></h2>
         </section>
         <footer>
             footer
