Se ha realizado el inicio mobile y creado el archivo login

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="ubicanos.html" class="item">Ubicanos</a>
                 <a href="op.html" class="item">Opiniones</a>
                 <hr class="menu-hr" noshade="">
-                <a href="#" class="item"> <button class="navbar-button"><i class="fa-solid fa-user"></i>Iniciar Sesión</button></a>
+                <a href="login.html" class="item"> <button class="navbar-button"><i class="fa-solid fa-user"></i>Iniciar Sesión</button></a>
             </div>
         </nav>
 
@@ -31,11 +31,12 @@
             
         </section>
         <section id="descripcion">
-                <p>Estamos ubicados en el barrio La Cabrera al norte de Bogotá, en un contexto de lujo donde interactúan los negocios, 
+                <p class=" flex1">Estamos ubicados en el barrio La Cabrera al norte de Bogotá, en un contexto de lujo donde interactúan los negocios, 
                 el ocio y el descanso, gracias a su estratégica ubicación rodeada de bancos, restaurantes de alta cocina, centros comerciales,
                 almacenes de lujo y emblemáticos parques para aprovechar la naturaleza entre la ciudad caminay y hacer un poco de deporte al aire 
                 libre están el parque del Virrey y El Parque de la 93. Además de nuestro exclusivo diseño, ponemos a tu disposición una oferta 
                 gastronómica tan sofisticada como saludable a base de productos locales, cargados de lo mejor de la tradición colombiana.</p>
+                <img class=" flex2" src="img/Hotelia negro vertical.svg" width="160px" alt="">
         </section>
         <section id="featur">
             <h2 class="feature-tittle">Razones por las que disfrutarás quedarte con nosotros</h2>
@@ -62,7 +63,7 @@
         </section>
         <section id="ubicacion">
             <h2>Ubícanos</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.963179898835!2d-74.07730698577846!3d4.600617843799563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f99a716030ee5%3A0xc494c29041303081!2zQ3JhLiA4ICMxMiwgQm9nb3TDoQ!5e0!3m2!1ses!2sco!4v1659559795455!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.963179898835!2d-74.07730698577846!3d4.600617843799563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f99a716030ee5%3A0xc494c29041303081!2zQ3JhLiA4ICMxMiwgQm9nb3TDoQ!5e0!3m2!1ses!2sco!4v1659559795455!5m2!1ses!2sco" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <h2>AVENIDA CARRERA 8, #12A-42, BOGOTÁ DC, COLOMBIA</h2>
             <hr class="ubi-hr" noshade="">
             <h2>+57 601 4567899</h2>
@@ -83,7 +84,7 @@
             <hr class="footer-hr" noshade="">
 
             <div class="footer-h3">
-            <p>Politicas de privacidad </p>   <p>Politicas de privacidad </p>
+            <p>Politicas de privacidad</p>   <p>Politicas de privacidad </p>
             </div>
             <hr class="footer-hr" noshade="">
             <div class="footer-r">
