Se ha realizado el inicio mobile y creado el archivo login 2

--- a/login.html
+++ b/login.html
@@ -8,6 +8,10 @@
     <title>Login</title>
 </head>
 <body>
-    
+        <div class="contenedor">
+
+            <label for="">Usuario<input type="text"></label>
+
+        </div>
 </body>
 </html>
