Se ha realizado el diseño responsive del inicio

--- a/login.html
+++ b/login.html
@@ -8,9 +8,13 @@
     <title>Login</title>
 </head>
 <body>
-        <div class="contenedor">
-
+        <div id="contenedor">
+            <i class="fa-solid fa-circle-user"></i>
             <label for="">Usuario<input type="text"></label>
+            
+            <label for="">Contraseña<input type="password"></label>
+            <a href="login.html" class="item"> <button class="navbar-button"><i class="fa-solid fa-user"></i>Iniciar Sesión</button></a>
+            
 
         </div>
 </body>
