--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos-css-grid.css">
     <script src="https://kit.fontawesome.com/6131ecdde6.js"  crossorigin="anonymous"></script>
-    <title>Hotelia con CSS GRID</title>
+    <title>Hotelia</title>
 </head>
 <body>
 
@@ -61,19 +61,61 @@
                 </div>
             </div>
         </section>
+        
+
+   <section id="features">
+    <h2 class="feature-tittle">Razones por las que disfrutaras quedarte con nosotros</h2>
+    <div class="feature-description">
+        <div class="feature feature-blue">
+            <i class="fa-solid fa-bell-concierge"></i>
+            <p>Reserva</p>
+        </div>
+        <div class="feature feature-black">
+            <i class="fa-solid fa-bed"></i>
+            <p>Descanso</p>
+        </div>
+        <div class="feature feature-blue">
+            <i class="fa-solid fa-wifi"></i>
+            <p>Wifi</p>
+        </div>
+        <div  class="feature feature-black">
+            <i class="fa-solid fa-dumbbell"></i>
+            <p>Deporte</p>
+        </div>
+    </div>
+   </section>
         <section id="ubicacion">
             <h2>Ubícanos</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.963179898835!2d-74.07730698577846!3d4.600617843799563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f99a716030ee5%3A0xc494c29041303081!2zQ3JhLiA4ICMxMiwgQm9nb3TDoQ!5e0!3m2!1ses!2sco!4v1659559795455!5m2!1ses!2sco" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.963179898835!2d-74.07730698577846!3d4.600617843799563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f99a716030ee5%3A0xc494c29041303081!2zQ3JhLiA4ICMxMiwgQm9nb3TDoQ!5e0!3m2!1ses!2sco!4v1659559795455!5m2!1ses!2sco"
+             style="border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <h2>AVENIDA CARRERA 8, #12A-42, BOGOTÁ DC, COLOMBIA</h2>
             <hr class="ubi-hr" noshade="">
             <h2>+57 601 4567899</h2>
         </section>
         <section id="opinion">
             <h2>Nuestros usuarios dicen...</h2>
+            <div class="op-banner">
+                <div class="container1">
+                <p>Diego Rodriguez</p>
+                <img src="img/Group 200.svg" alt="">
+                <i class="fa-solid fa-star-sharp"></i>
+                </div>
+                <div class="container2">
+                <p>Diana Garcia</p>
+                 <i class="fa-solid fa-star-sharp"></i>
+                <img src="img/Group 200.svg" alt="">
+               
+                </div>
+                <div class="container3">
+                <p>Diana Garcia</p>
+                    <img src="img/Group 200.svg" alt="">
+                    <i class="fa-solid fa-star-sharp"></i>
+                    </div>
+            </div>
         </section>
         <footer>
             <div class="text-fo">
-               <p>Contenido</p>
+               <p>Contenido cotenido contenedor con</p>
             </div>
             <hr class="footer-hr" noshade="">
             <div class="text-fo2">
