--- a/login.html
+++ b/login.html
@@ -5,17 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css">
+    <script src="https://kit.fontawesome.com/6131ecdde6.js"  crossorigin="anonymous"></script>
     <title>Login</title>
 </head>
 <body>
+    <form action="" method="post">
         <div id="contenedor">
+            <img src="img/Hotelia horizontal negro.svg" width="80px" alt="">
             <i class="fa-solid fa-circle-user"></i>
             <label for="">Usuario<input type="text"></label>
             
-            <label for="">Contraseña<input type="password"></label>
-            <a href="login.html" class="item"> <button class="navbar-button"><i class="fa-solid fa-user"></i>Iniciar Sesión</button></a>
+            <label for="">Contraseña <input type="password"></label>
+            <a href="login.html" class="item"> <button class="navbar-button">Iniciar Sesión</button></a>
             
-
+            <div class="log">
+            <a href="#"><p> ¿No tienes una cuenta?</p>Regístrate aquí</a>
+            </div>
         </div>
+    </form>
 </body>
 </html>
