--- a/formulario.html
+++ b/formulario.html
@@ -12,8 +12,8 @@
 
     <div id="container-grid">
         <div class="head">
-            <img src="img/Hotelia horizontal blanco.svg" alt="">
-            <h2>Un lugar en tu corazón</h2>
+           <h2 class="tittle"> <img src="img/hotelia campana.svg" alt="">otelia</h2>
+            <h2 >Un lugar en tu corazón</h2>
         </div>
         <div class="cuerpo">
             <form action="" method="post">
