Se han guardado cambios en el login

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="container-grid">
-    <form action="" method="post">
+    <form action="" method="post" id="form">
         <h2>Bienvenido, Angie Vargas</h2>
         <img src="" alt="">
         
