--- a/formulario.html
+++ b/formulario.html
@@ -48,7 +48,7 @@
                    
                     </select>
                 </label>
-                <label for="">Foto <input type="text" placeholder="Seleccionar archivo"> </label>
+                <label for="">Foto <input type="file"> </label>
                <label for="">Contraseña <input type="password"></label>
                 <label for="">Confirmar contraseña <input type="password"></label>
                <label for=""><input type="checkbox" name="" id=""> Acepto Términos y Condiciones</label>
