--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <div class="carousel-item active">
                     <img src="img/index/slide1.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>First slide label</h5>
+                      <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, ipsa?</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -128,18 +128,32 @@
                 <div class="container1">
                 <p><img class="im" src="img/opinion/user1.png" alt="">Diego Rodriguez</p>
                 <i class="fa-solid fa-star-sharp"></i>
+                <i class="fa-solid fa-star-sharp"></i>
+                <i class="fa-solid fa-star-sharp"></i>
+                <i class="fa-solid fa-star-sharp"></i>
+                <i class="fa-solid fa-star-sharp"></i>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut qui vel libero!</p>
                 <img src="img/opinion/Vector-opinion.png" alt="">
                 </div>
 
                 <div class="container1">
-                <p><img class="im" src="img/opinion/user2.png" alt="">Diana Garcia</p>
+               <p><img class="im" src="img/opinion/user2.png" alt="">Diana Garcia</p>
                 <i class="fa-solid fa-star-sharp"></i>
+                <i class="fa-solid fa-star-sharp"></i>
+                <i class="fa-solid fa-star-sharp"></i>
+                <i class="fa-solid fa-star-sharp"></i>
+                <i class="fa-solid fa-star-sharp"></i>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut qui vel libero!</p>
                 <img src="img/opinion/Vector-opinion.png" alt="">
                 </div>
               
                 <div class="container1">
                 <p><img class="im" src="img/opinion/user3.png" alt="">Diego Rodriguez</p>
                 <i class="fa-solid fa-star-sharp"></i>
+                <i class="fa-solid fa-star-sharp"></i>
+                <i class="fa-solid fa-star-sharp"></i>
+                <i class="fa-solid fa-star-sharp"></i>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe reiciendis non enim.</p>
                 <img src="img/opinion/Vector-opinion.png" alt="">
                 </div>
 
@@ -147,7 +161,12 @@
         </section>
         <footer>
             <div class="text-fo">
-               <p>Contenido cotenido contenedor con</p>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+               <div class="redes">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-twitter"></i>
+               </div>
             </div>
             <hr class="footer-hr" noshade="">
             <div class="text-fo2">
